hetzner/k8s/minio_secrets/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability-minio
  labels:
    app.kubernetes.io/managed-by: argocd
